--- a/APP/templates/APP/index.html
+++ b/APP/templates/APP/index.html
@@ -1,87 +1,100 @@
 {% extends "APP/padre.html" %}
 {% block Contenido %}
 {% load static %}
-      <div id="carouselExample" class="carousel slide container" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExample" data-slide-to="1"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="gatillo" id="gatillo">
-              <div class="adoptalos" id="adoptalos">
-              <H1 class="h1flotante">ADOPTALOS, ELLOS TE NECESITAN</H1>
-              <a href="{%url 'adopcion'%}"><input class="boton5" type="button" value="Adoptar>>"></a>
-            </div>
-          </div>
-              <div class="vacio">
-                <img class="imagenCarousel" src="{% static 'APP/css/perro3.jpg' %}" alt="" class="d-block w-100 imagenes" height="700" >
-              </div>
-            </div> 
-            <div class="carousel-item">
-                <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100   ">
-            </div> 
+<div id="carouselExample" class="carousel slide container" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExample" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="gatillo" id="gatillo">
+        <div class="adoptalos" id="adoptalos">
+          <H1 class="h1flotante">ADOPTALOS, ELLOS TE NECESITAN</H1>
+          <a href="{%url 'adopcion'%}"><input class="boton5" type="button" value="Adoptar>>"></a>
         </div>
-        <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </a>
-        <a href="#carouselExample" class="carousel-control-next" rol="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </a>
+      </div>
+      <div class="vacio">
+        <img class="imagenCarousel" src="{% static 'APP/css/perro3.jpg' %}" alt="" class="d-block w-100 imagenes"
+          height="700">
+      </div>
     </div>
-        <!-- CIRCULOS A PARTIR DE ACA -->
-        <div class="container pt-4">
+    <div class="carousel-item">
+      <img src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100   ">
+    </div>
+  </div>
+  <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden"></span>
+  </a>
+  <a href="#carouselExample" class="carousel-control-next" rol="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden"></span>
+  </a>
+</div>
+<!-- CIRCULOS A PARTIR DE ACA -->
+<div class="container pt-4">
 
-            <!-- Three columns of text below the carousel -->
-            <div class="row" id="row">
-              <div class="col-lg-4 circulos perro">
-                <img class="bd-placeholder-img rounded-circle perro1" src="{% static 'APP/css/pedrito.jpg' %}" alt="" width="140px" height="140px">      
-                <h2 class="fw-normal">Donaciones</h2>
-                <p>Hacelo por ellos! Cualquier cosa q te sobre les sirve. Desde correas y collares usados, hasta juguetes. No dudes en comunicarte con nosotros</p>
-                
-              </div><!-- /.col-lg-4 -->
-              
-              <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro2" src="{% static 'APP/css/brauni.jpg' %}" alt="" width="140px" height="140px">        
-                <h2 class="fw-normal">Para adoptar...</h2>
-                <p>Cuando adoptamos hay que tomar la responsabilidad de comprarle collar y chapita(por cualquier imprevisto), y castrar al animal (para cortar con la reprodiccion indiscriminada de animales callejeros).</p>
-                
-              </div><!-- /.col-lg-4 -->
-              
-              <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/ayudaanimal.png' %}" alt="" width="140px" height="140px">          
-                <h2 class="fw-normal">Sorteos por ellos</h2>
-                <p>A veces recibimos donaciones para ser sorteadas y conseguir fondos para seguir ayudando. Por eso esten atentos a las redes donde indicaremos la fecha del sorteo y como participar. </p>
-                
-              </div><!-- /.col-lg-4 -->
-              
-              <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro4" src="{% static 'APP/css/clarens.jpg' %}" alt="" width="140px" height="140px">          
-                <h2 class="fw-normal">Instragram, Facebook y Tik Tok</h2>
-                <p>Siganos en nuestras redes, donde pasamos las novedades de los rescatados, partes medicos y los adoptados.  </p>
-                
-              </div><!-- /.col-lg-4 -->
-              
-              <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro5" src="{% static 'APP/css/ayudaanimalparque.jpg' %}" alt="" width="140px" height="140px">          
-                <h2 class="fw-normal">Tardes en el parque</h2>
-                <p>Cuando disponemos de tiempo y los dias acompañan, organizamos unas hermosas juntadas con ellos y ustedes en las plazas de Ciudad Evita. A prestar atencion en las redes donde vasmoa publicar las fechas y horarios. ¡Los esperamos!</p>
-                
-              </div><!-- /.col-lg-4 -->
-              <div class="col-lg-4 circulos">
-                <img class="bd-placeholder-img rounded-circle perro6" src="{% static 'APP/css/rubioYroma.jpg' %}" alt="" width="140px" height="140px">          
-                <h2 class="fw-normal">Historias felices</h2>
-                <p>Ya alcanzamos las 60 adopciones, en nuestro Instagram pueden visualizar algunas de estas hermosas historias en Destacadas!</p>
-                
-              </div><!-- /.col-lg-4 -->
+  <!-- Three columns of text below the carousel -->
+  <div class="row" id="row">
+    <div class="col-lg-4 circulos perro">
+      <img class="bd-placeholder-img rounded-circle perro1" src="{% static 'APP/css/pedrito.jpg' %}" alt=""
+        width="140px" height="140px">
+      <h2 class="fw-normal">Donaciones</h2>
+      <p>Hacelo por ellos! Cualquier cosa q te sobre les sirve. Desde correas y collares usados, hasta juguetes. No
+        dudes en comunicarte con nosotros</p>
+
+    </div><!-- /.col-lg-4 -->
+
+    <div class="col-lg-4 circulos">
+      <img class="bd-placeholder-img rounded-circle perro2" src="{% static 'APP/css/brauni.jpg' %}" alt="" width="140px"
+        height="140px">
+      <h2 class="fw-normal">Para adoptar...</h2>
+      <p>Cuando adoptamos hay que tomar la responsabilidad de comprarle collar y chapita(por cualquier imprevisto), y
+        castrar al animal (para cortar con la reprodiccion indiscriminada de animales callejeros).</p>
+
+    </div><!-- /.col-lg-4 -->
+
+    <div class="col-lg-4 circulos">
+      <img class="bd-placeholder-img rounded-circle perro3" src="{% static 'APP/css/ayudaanimal.png' %}" alt=""
+        width="140px" height="140px">
+      <h2 class="fw-normal">Sorteos por ellos</h2>
+      <p>A veces recibimos donaciones para ser sorteadas y conseguir fondos para seguir ayudando. Por eso esten atentos
+        a las redes donde indicaremos la fecha del sorteo y como participar. </p>
+
+    </div><!-- /.col-lg-4 -->
+
+    <div class="col-lg-4 circulos">
+      <img class="bd-placeholder-img rounded-circle perro4" src="{% static 'APP/css/clarens.jpg' %}" alt=""
+        width="140px" height="140px">
+      <h2 class="fw-normal">Instragram, Facebook y Tik Tok</h2>
+      <p>Siganos en nuestras redes, donde pasamos las novedades de los rescatados, partes medicos y los adoptados. </p>
+
+    </div><!-- /.col-lg-4 -->
+
+    <div class="col-lg-4 circulos">
+      <img class="bd-placeholder-img rounded-circle perro5" src="{% static 'APP/css/ayudaanimalparque.jpg' %}" alt=""
+        width="140px" height="140px">
+      <h2 class="fw-normal">Tardes en el parque</h2>
+      <p>Cuando disponemos de tiempo y los dias acompañan, organizamos unas hermosas juntadas con ellos y ustedes en las
+        plazas de Ciudad Evita. A prestar atencion en las redes donde vasmoa publicar las fechas y horarios. ¡Los
+        esperamos!</p>
+
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4 circulos">
+      <img class="bd-placeholder-img rounded-circle perro6" src="{% static 'APP/css/rubioYroma.jpg' %}" alt=""
+        width="140px" height="140px">
+      <h2 class="fw-normal">Historias felices</h2>
+      <p>Ya alcanzamos las 60 adopciones, en nuestro Instagram pueden visualizar algunas de estas hermosas historias en
+        Destacadas!</p>
+
+    </div><!-- /.col-lg-4 -->
 
 
-          </div>
-        </div>
-        <script src="{% static 'APP/js/ScrollMagic.min.js' %}"></script>
-        <script src="{% static 'APP/js/scrollEfects.js' %}"></script>
-        <script src="{% static 'APP/js/debug.addIndicators.min.js' %}"></script>
-        
-        {% endblock %}
+  </div>
+</div>
+<script src="{% static 'APP/js/ScrollMagic.min.js' %}"></script>
+<script src="{% static 'APP/js/scrollEfects.js' %}"></script>
+<script src="{% static 'APP/js/debug.addIndicators.min.js' %}"></script>
+
+{% endblock %}
