--- a/APP_PANEL/templates/APP_PANEL/article_detail.html
+++ b/APP_PANEL/templates/APP_PANEL/article_detail.html
@@ -21,31 +21,34 @@
     </div>
   </main> -->
 
-  <div id="carouselExample" class="carousel slide container carouselDog" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExample" data-slide-to="1"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-          
-          <img  src="/media/{{articulo.image}}" alt="" class="d-block w-100 imagenes">
-          
-        </div> 
-        <div class="carousel-item">
-            <img  src="{% static 'APP/css/perro2.jpg' %}" alt="" class="d-block w-100 imagenes">
-        </div> 
+<div id="carouselExample" class="carousel slide container carouselDog" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExample" data-slide-to="1"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+
+      <img src="/media/{{articulo.image}}" alt="" class="d-block w-100 imagenes">
+
     </div>
-    <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
-    </a>
-    <a href="#carouselExample" class="carousel-control-next" rol="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden"></span>
-    </a>
-    <h3 class="text-center mt-3 h3detail">{{articulo.title}}</h3>
-    <div class="textoDetail">
+    <div class="carousel-item">
+      <img src="/media/{{articulo.image1}}" alt="" class="d-block w-100 imagenes">
+    </div>
+    <div class="carousel-item">
+      <img src="/media/{{articulo.image2}}" alt="" class="d-block w-100 imagenes">
+    </div>
+  </div>
+  <a href="#carouselExample" class="carousel-control-prev" rol="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden"></span>
+  </a>
+  <a href="#carouselExample" class="carousel-control-next" rol="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden"></span>
+  </a>
+  <h3 class="text-center mt-3 h3detail">{{articulo.title}}</h3>
+  <div class="textoDetail">
     {{articulo.content | safe}}
   </div>
 </div>
