--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -89,6 +89,9 @@
               <a class="nav-link" href="{%url 'adopcion'%}">Adopcion</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{%url 'transito'%}">Transito</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{%url 'donaciones'%}">Donaciones</a>
             </li>
             <li class="nav-item">
@@ -126,6 +129,7 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="{%url 'raiz'%}" class="nav-link px-2 text-muted">Inicio</a></li>
       <li class="nav-item"><a href="{%url 'adopcion'%}" class="nav-link px-2 text-muted">Adopcion</a></li>
+      <li class="nav-item"><a href="{%url 'transito'%}" class="nav-link px-2 text-muted">Transito</a></li>
       <li class="nav-item"><a href="{%url 'donaciones'%}" class="nav-link px-2 text-muted">Donaciones</a></li>
       <li class="nav-item"><a href="{%url 'contactenos'%}" class="nav-link px-2 text-muted">Contactenos</a></li>
     </ul>
