--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -1,6 +1,6 @@
 {% extends "APP/padre.html" %}
 {% block Contenido %}
-<div class="container botonsend">
+<div class="container botonsend pb-3">
   <hr>
   <h1>Transito</h1>
 
