--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -35,7 +35,7 @@
     <div class="grid-item" id="animales">
       <div class="imgPublicacion"><img class="bd-placeholder-img rounded-circle" src="/media/{{listing.image}}" alt=""
           srcset="" width="140px" height="140px"></div>
-      <h2 class="fw-normal text-center">{{listing.title}}</h2>
+      <h2 class="fw-normal text-center pt-3">{{listing.title}}</h2>
       <div class="botonDetalles text-center">
         <p><a class="btn btn-secondary" href="{%url 'article-detail' listing.id%}">Ver detalles »</a></p>
       </div>
