--- a/APP/templates/APP/padre.html
+++ b/APP/templates/APP/padre.html
@@ -85,7 +85,7 @@
         <div>
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{%url 'raiz'%}">INICIO</a>
+              <a class="nav-link active" aria-current="page" href="{%url 'raiz'%}">Inicio</a>
             </li>
             <li>
               <a class="nav-link" href="{%url 'adopcion'%}">Adopcion</a>
@@ -143,7 +143,7 @@
       <div class="miimagen">
 
         <a href="https://www.instagram.com/ayuda_animal.ok/" target="_blank"><img class=""
-            src="{% static 'APP/css/inst.png' %}" alt=""></a>
+            src="{% static 'APP/css/inst.png' %}" alt="" width="20px"></a>
         <a href="https://www.facebook.com/Ayuda_animalok-105794385347786" target="_blank"><img class=""
             src="{% static 'APP/css/face.png' %}" alt=""></a>
       </div>
