--- a/APP_PANEL/templates/APP_PANEL/adoption.html
+++ b/APP_PANEL/templates/APP_PANEL/adoption.html
@@ -4,8 +4,8 @@
 <div class="container botonsend container_">
   <hr>
   <h1>Adopcion</h1>
-  <h3>Hola, en esta pestaña puedes conocer las historias de quienes estan esperando un nuevo hogar. </h3>
-  <p> Si deseas postularte para adoptar, toca en el boton "Completar formulario".
+  <p> </p>
+  <p> Hola, en esta pestaña puedes conocer las historias de quienes estan esperando un nuevo hogar.<br>Si deseas postularte para adoptar, toca en el boton "Completar formulario".
     Evaluaremos el formulario y nos estaremos comunicando.
   </p>
   <hr>
@@ -35,7 +35,7 @@
     <div class="grid-item" id="animales">
       <div class="imgPublicacion"><img class="bd-placeholder-img rounded-circle" src="/media/{{listing.image}}" alt=""
           srcset="" width="140px" height="140px"></div>
-      <h2 class="fw-normal text-center pt-3">{{listing.title}}</h2>
+      <h3 class="fw-normal text-center pt-3">{{listing.title}}</h3>
       <div class="botonDetalles text-center">
         <p><a class="btn btn-secondary" href="{%url 'article-detail' listing.id%}">Ver detalles »</a></p>
       </div>
