--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -1,23 +1,24 @@
 {% extends "APP/padre.html" %}
 {% block Contenido %}
+{% load static %}
 <div class="container botonsend pb-3">
   <hr>
   <h1>Transito</h1>
 
   <h3>
-    ¡Bienvenidos/as a transitar!
+    ¡Bienvenidos/as a transitar! 🐶😸gato
     <hr>
     Lamentablemente no contamos con lugar fisico donde alojar a los rescataditos mientras se recuperan y les conseguimos familia. 
-    Es por esto que ser hogar de transito es fundamental para poder continuar con esta hermosa tarea. 
+    Es por esto que ser hogar de transito es fundamental para poder continuar con esta hermosa tarea 💖
     <hr>
     Todos los transitantes lo hacen de manera voluntaria.  Nosotras nos ocupamos del alimento, de los extras que el animal pueda 
     necesitar (como adiestramiento o medicamentos) y de buscarles una familia para siempre.
-    Los transitantes solo deben ocuparse de darles techo,amor, cuidado, alimentarlos y pasearlos.  
+    Los transitantes solo deben ocuparse de darles techo,amor, cuidado, alimentarlos y pasearlos 😻
     <hr>
     Nuestros únicos requisitos es que sea una casa segura y un minimo de quince dias para mayor organizacion.
-    si desea postularse para transitar les rogamos que se comuniquen por instagram o por facebook.
+    si desea postularse para transitar les rogamos que se comuniquen por <a class="instagramImg" href="https://www.instagram.com/ayuda_animal.ok/" target="_blank">instagram </a>o por <a class="instagramImg" href="https://www.facebook.com/Ayuda_animalok-105794385347786"" target="_blank">facebook </a>  😺
     <hr>
-    Transitar es un viaje de ida. 
+    Transitar es un viaje de ida 😽
     
     <hr>
     Muchas gracias por tu ayuda🐾
@@ -30,5 +31,6 @@
 
 
   <hr>
+  
 </div>
 {% endblock %}
