--- a/APP/templates/APP/articulo_form.html
+++ b/APP/templates/APP/articulo_form.html
@@ -4,14 +4,14 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 
-<div class="textFieldEdition">
-  
-    <form class="loginform" method="POST">
-      <h1>Editar articulo</h1>
-        {% csrf_token%}
-        {{form.as_ul}}
-        <input class="btn btn-primary" type="submit" value="Enviar">
-    </form>
-  </div>
-{% load static %}
-  {% endblock %}
+<div class="textFieldEdition container">
+
+  <form class="loginform" method="POST">
+    <h1>Editar articulo</h1>
+    {% csrf_token%}
+    {{form.as_ul}}
+    <input class="btn btn-primary" type="submit" value="Enviar">
+  </form>
+</div>
+
+{% endblock %}
