--- a/APP_PANEL/templates/APP_PANEL/article_form.html
+++ b/APP_PANEL/templates/APP_PANEL/article_form.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 
-<div class="textFieldEdition">
+<div class="textFieldEdition container">
 
   <form class="loginform" method="POST" enctype=multipart/form-data>
     <h1>Crear nueva historia</h1>
