--- a/APP/templates/APP/Transito.html
+++ b/APP/templates/APP/Transito.html
@@ -6,7 +6,7 @@
   <h1>Transito</h1>
 
   <h3>
-    ¡Bienvenidos/as a transitar! 🐶😸gato
+    ¡Bienvenidos/as a transitar! 🐶😸
     <hr>
     Lamentablemente no contamos con lugar fisico donde alojar a los rescataditos mientras se recuperan y les conseguimos familia. 
     Es por esto que ser hogar de transito es fundamental para poder continuar con esta hermosa tarea 💖
